--- a/XamarinData/XamarinData.csproj
+++ b/XamarinData/XamarinData.csproj
@@ -14,6 +14,7 @@
         <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
         <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
         <ProvisioningType>automatic</ProvisioningType>
+        <LangVersion>7.3</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
         <DebugSymbols>true</DebugSymbols>
@@ -128,7 +129,11 @@
     <ItemGroup>
         <Compile Include="Main.cs" />
         <Compile Include="AppDelegate.cs" />
+        <Compile Include="Model\DataDownloader.cs" />
+        <Compile Include="Model\DataParser.cs" />
+        <Compile Include="Model\Offer.cs" />
         <Compile Include="SceneDelegate.cs" />
+        <Compile Include="TableSource.cs" />
         <Compile Include="ViewController.cs" />
         <Compile Include="ViewController.designer.cs">
             <DependentUpon>ViewController.cs</DependentUpon>
